.next/dev/logs/next-development.log
[00:00:00.657] Server  LOG      ✓ Ready in 441ms
[00:00:11.048] Server  ERROR    ⨯ ./lib/authOptions.ts:1:8
Parsing ecmascript source code failed
> 1 | ﻿<PASTE THE lib/authOptions.ts CONTENT FROM ABOVE HERE>
    |        ^^^
  2 |

Expected '>', got 'THE'

Import trace:
  Route:
    ./lib/authOptions.ts
    ./pages/api/auth/[...nextauth].ts


[00:00:11.239] Browser WARN    Performance warning! LoadScript has been reloaded unintentionally! You should not pass `libraries` prop as new array. Please keep an array of libraries as static class property for Components and PureComponents, or just a const variable outside of component, or somewhere in config files or ENV variables
[00:00:11.239] Browser WARN    As of February 21st, 2024, google.maps.Marker is deprecated. Please use google.maps.marker.AdvancedMarkerElement instead. At this time, google.maps.Marker is not scheduled to be discontinued, but google.maps.marker.AdvancedMarkerElement is recommended over google.maps.Marker. While google.maps.Marker will continue to receive bug fixes for any major regressions, existing bugs in google.maps.Marker will not be addressed. At least 12 months notice will be given before support is discontinued. Please see https://developers.google.com/maps/deprecations for additional details and https://developers.google.com/maps/documentation/javascript/advanced-markers/migration for the migration guide.
[00:00:11.239] Browser ERROR   ./lib/authOptions.ts:1:8
Parsing ecmascript source code failed
> 1 | ﻿<PASTE THE lib/authOptions.ts CONTENT FROM ABOVE HERE>
    |        ^^^
  2 |

Expected '>', got 'THE'

Import trace:
  Route:
    ./lib/authOptions.ts
    ./pages/api/auth/[...nextauth].ts
[00:00:11.247] Server  ERROR    ⨯ ./lib/authOptions.ts:1:8
Parsing ecmascript source code failed
> 1 | ﻿<PASTE THE lib/authOptions.ts CONTENT FROM ABOVE HERE>
    |        ^^^
  2 |

Expected '>', got 'THE'

Import trace:
  Route:
    ./lib/authOptions.ts
    ./pages/api/auth/[...nextauth].ts


[00:00:11.395] Browser ERROR   Google Maps JavaScript API error: InvalidKeyMapError
https://developers.google.com/maps/documentation/javascript/error-messages#invalid-key-map-error
[00:00:11.395] Browser ERROR   ./lib/authOptions.ts:1:8
Parsing ecmascript source code failed
> 1 | ﻿<PASTE THE lib/authOptions.ts CONTENT FROM ABOVE HERE>
    |        ^^^
  2 |

Expected '>', got 'THE'

Import trace:
  Route:
    ./lib/authOptions.ts
    ./pages/api/auth/[...nextauth].ts
[00:00:11.395] Browser ERROR   ./lib/authOptions.ts:1:8
Parsing ecmascript source code failed
> 1 | ﻿<PASTE THE lib/authOptions.ts CONTENT FROM ABOVE HERE>
    |        ^^^
  2 |

Expected '>', got 'THE'

Import trace:
  Route:
    ./lib/authOptions.ts
    ./pages/api/auth/[...nextauth].ts
[00:00:11.395] Browser ERROR   [next-auth][error][CLIENT_FETCH_ERROR] 
https://next-auth.js.org/errors#client_fetch_error Unexpected token '<', "<!DOCTYPE "... is not valid JSON {"error":{"message":"Unexpected token '<', \"<!DOCTYPE \"... is not valid JSON","name":"SyntaxError","stack":"SyntaxError: Unexpected token '<', \"<!DOCTYPE \"... is not valid JSON"},"message":"Unexpected token '<', \"<!DOCTYPE \"... is not valid JSON","url":"/api/auth/session"}
[00:00:11.395] Browser ERROR   ./lib/authOptions.ts:1:8
Parsing ecmascript source code failed
> 1 | ﻿<PASTE THE lib/authOptions.ts CONTENT FROM ABOVE HERE>
    |        ^^^
  2 |

Expected '>', got 'THE'

Import trace:
  Route:
    ./lib/authOptions.ts
    ./pages/api/auth/[...nextauth].ts
[00:00:12.642] Browser ERROR   ./lib/authOptions.ts:1:8
Parsing ecmascript source code failed
> 1 | ﻿<PASTE THE lib/authOptions.ts CONTENT FROM ABOVE HERE>
    |        ^^^
  2 |

Expected '>', got 'THE'

Import trace:
  Route:
    ./lib/authOptions.ts
    ./pages/api/auth/[...nextauth].ts
[00:00:12.642] Browser ERROR   ./lib/authOptions.ts:1:8
Parsing ecmascript source code failed
> 1 | ﻿<PASTE THE lib/authOptions.ts CONTENT FROM ABOVE HERE>
    |        ^^^
  2 |

Expected '>', got 'THE'

Import trace:
  Route:
    ./lib/authOptions.ts
    ./pages/api/auth/[...nextauth].ts
[00:00:16.132] Browser WARN    Google Maps JavaScript API warning: InvalidKey https://developers.google.com/maps/documentation/javascript/error-messages#invalid-key
[00:00:25.166] Browser WARN    Performance warning! LoadScript has been reloaded unintentionally! You should not pass `libraries` prop as new array. Please keep an array of libraries as static class property for Components and PureComponents, or just a const variable outside of component, or somewhere in config files or ENV variables
